--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.1.0",
-    "@angular/common": "^19.1.0",
+    "@angular/common": "^19.2.1",
     "@angular/compiler": "^19.1.0",
     "@angular/core": "^19.1.0",
-    "@angular/forms": "^19.1.0",
-    "@angular/platform-browser": "^19.1.0",
+    "@angular/forms": "^19.2.1",
+    "@angular/material": "^19.2.2",
+    "@angular/platform-browser": "^19.2.1",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/platform-server": "^19.1.0",
-    "@angular/router": "^19.1.0",
+    "@angular/router": "^19.2.1",
     "@angular/ssr": "^19.1.8",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
